--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "4.3.1",
     "@angular/common": "4.3.1",
     "@angular/compiler": "4.3.1",
@@ -31,6 +32,7 @@
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.4",
     "ng2-nouislider": "1.6.1",
+    "nodemon": "^1.12.1",
     "nouislider": "9.2.0",
     "popper.js": "^1.12.3",
     "rxjs": "^5.1.0",
