Added: se agrega un metodo para agregar estacionamientos

--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "4.0.0-beta",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "express-session": "^1.15.6",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
     "jwt-simple": "^0.5.1",
-    "moment": "^2.19.2",
+    "moment": "^2.20.0",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.4",
+    "mongoose": "^4.13.7",
     "ng2-nouislider": "1.6.1",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.13.3",
     "nouislider": "9.2.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "popper.js": "^1.12.3",
-    "rxjs": "^5.1.0",
+    "popper.js": "^1.13.0",
+    "rxjs": "^5.5.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -48,16 +48,16 @@
     "@angular/compiler-cli": "4.3.1",
     "@angular/language-service": "4.3.1",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.94",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
