--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
     "jwt-simple": "^0.5.1",
-    "moment": "^2.20.0",
+    "moment": "^2.20.1",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.7",
+    "mpromise": "^0.5.5",
     "ng2-nouislider": "1.6.1",
-    "nodemon": "^1.13.3",
+    "nodemon": "^1.14.1",
     "nouislider": "9.2.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "popper.js": "^1.13.0",
-    "rxjs": "^5.5.5",
+    "rxjs": "^5.5.6",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -48,7 +49,7 @@
     "@angular/compiler-cli": "4.3.1",
     "@angular/language-service": "4.3.1",
     "@types/jasmine": "2.5.45",
-    "@types/node": "^6.0.94",
+    "@types/node": "^6.0.95",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
